# bls12_381_relic

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yaml
benches/: engine.rs
bls12_381_relic-benches/: Cargo.toml
bls12_381_relic-benches/benches/: engine.rs
librelic-sys/: Cargo.toml  README.md  build.rs  wrapper.c  wrapper.h
librelic-sys/src/: lib.rs
src/: affine.rs  engine.rs  g1.rs  g2.rs  gt.rs  instance.rs  lib.rs  scalar.rs  serde_helpers.rs  utils.rs
tests/: bls.rs  spseq.rs
