[package]
name = "bls12_381_relic"
description = "Bindings for BLS12-381 implemented by relic"
version = "0.1.5"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ait-crypto/bls12_381_relic/"
edition = "2024"
keywords = ["pairings", "BLS12-381", "relic"]
categories = ["cryptography", "api-bindings", "no-std"]
rust-version = "1.85"

[dependencies]
generic-array = { version = "1", default-features = false, features = [
  "const-default",
] }
librelic-sys = { path = "librelic-sys", version = "0.1.1", default-features = false }
pairing = { version = "0.23" }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2", default-features = false, features = [
  "const-generics",
] }
thiserror = { version = "2", default-features = false, optional = true }
zeroize = { version = "1", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
rand = "0.9"
signature = { version = "2.0", default-features = false }
bincode = { version = "2", default-features = false, features = [
  "serde",
  "std",
] }

[features]
alloc = []
std = ["alloc", "dep:thiserror"]
default = ["std", "system"]
serde = ["dep:serde"]
zeroize = ["dep:zeroize"]
# from librelic-sys
system = ["librelic-sys/system"]
vendored = ["librelic-sys/vendored"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["bls12_381_relic-benches", "librelic-sys"]
