[package]
name = "bls12_381_relic-benches"
version = "0.1.0"
publish = false
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.86"

[dependencies]
bls12_381_relic = { path = "../", features = ["std"] }

[dev-dependencies]
bls12_381 = { version = "0.8", default-features = false, features = [
  "pairings",
  "alloc",
] }
criterion = { version = "0.8", default-features = false }
rand = "0.8"

[lib]
test = false
doc = false
doctest = false

[[bench]]
name = "engine"
harness = false
test = false
