[package]
name = "librelic-sys"
version = "0.1.0"
edition = "2021"
links = "relic"

[dependencies]

[build-dependencies]
pkg-config = { version = "0.3", optional = true }
bindgen = { version = "0.69" }
cc = { version = "1", features = ["parallel"] }
cmake = { version = "0.1", optional = true }

[features]
system = ["dep:pkg-config"]
default = ["system"]
vendored = ["dep:cmake"]
