[package]
name = "librelic-sys"
description = "Declarations for librelic"
version = "0.1.1+0.6.0"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/ait-crypto/bls12_381_relic/"
edition = "2021"
links = "relic"
categories = ["external-ffi-bindings"]
rust-version = "1.70"

[dependencies]

[build-dependencies]
pkg-config = { version = "0.3", optional = true }
bindgen = { version = "0.69" }
cc = { version = "1", features = ["parallel"] }
cmake = { version = "0.1", optional = true }

[features]
system = ["dep:pkg-config"]
default = ["system"]
vendored = ["dep:cmake"]
